--- a/trunk/Annotator/src/ProjectEditor.ui
+++ b/trunk/Annotator/src/ProjectEditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>696</width>
-    <height>552</height>
+    <width>669</width>
+    <height>637</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -78,16 +78,81 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="2" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Sources:</string>
+       </property>
+       <property name="buddy">
+        <cstring>sources</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="newSourceButton">
+       <property name="text">
+        <string>&amp;Add Source</string>
+       </property>
+       <property name="icon">
+        <iconset resource="images.qrc">
+         <normaloff>:/icons/images/vcs_add.png</normaloff>:/icons/images/vcs_add.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="removeSource">
+       <property name="text">
+        <string>&amp;Remove source</string>
+       </property>
+       <property name="icon">
+        <iconset resource="images.qrc">
+         <normaloff>:/icons/images/vcs_remove.png</normaloff>:/icons/images/vcs_remove.png</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="2" column="1">
+    <widget class="QListWidget" name="sources">
+     <item>
+      <property name="text">
+       <string>Chords</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="sourceName">
+     <property name="text">
+      <string>My extractor</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>E&amp;xtractor command:</string>
+      <string>Source &amp;command:</string>
      </property>
      <property name="buddy">
       <cstring>extractor</cstring>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="4" column="1">
     <layout class="QHBoxLayout">
      <property name="spacing">
       <number>6</number>
@@ -112,7 +177,7 @@ p, li { white-space: pre-wrap; }
      </item>
     </layout>
    </item>
-   <item row="3" column="0">
+   <item row="5" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Description &amp;scheme:</string>
@@ -122,7 +187,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="5" column="1">
     <layout class="QHBoxLayout">
      <property name="spacing">
       <number>6</number>
@@ -150,17 +215,17 @@ p, li { white-space: pre-wrap; }
      </item>
     </layout>
    </item>
-   <item row="4" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Descriptors file suffix:</string>
+      <string>File suffix:</string>
      </property>
      <property name="buddy">
       <cstring>suffix</cstring>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="6" column="1">
     <widget class="QComboBox" name="suffix">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -178,7 +243,7 @@ p, li { white-space: pre-wrap; }
      </item>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="7" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="label_7">
@@ -216,7 +281,7 @@ p, li { white-space: pre-wrap; }
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="extractorEditButton">
+      <widget class="QPushButton" name="testExtractorButton">
        <property name="toolTip">
         <string>Execute with a sample wave</string>
        </property>
@@ -239,7 +304,7 @@ p, li { white-space: pre-wrap; }
      </item>
     </layout>
    </item>
-   <item row="5" column="1">
+   <item row="7" column="1">
     <widget class="QTextEdit" name="configurationInfo">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
@@ -259,10 +324,20 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
+   <item row="8" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_6">
+     <property name="text">
+      <string>Source &amp;name</string>
+     </property>
+     <property name="buddy">
+      <cstring>sourceName</cstring>
      </property>
     </widget>
    </item>
