--- a/Annotator/src/ProjectEditor.ui
+++ b/Annotator/src/ProjectEditor.ui
@@ -357,7 +357,7 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="8" column="1">
-    <widget class="AggregationEditor" name="treeWidget"/>
+    <widget class="AggregationEditor" name="mappings"/>
    </item>
    <item row="8" column="0">
     <widget class="QLabel" name="label_9">
